feat: 개인 Snap 저장 API 구현
