# server/src/main/java/com/ansandy/moneysnap/shared/http/ApiErrorAdvice.java
@@ -1,4 +1,4 @@
-package com.ansandy.moneysnap.identity;
+package com.ansandy.moneysnap.shared.http;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.converter.HttpMessageNotReadableException;
@@ -10,9 +10,9 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 @RestControllerAdvice
 class ApiErrorAdvice {
 
-	@ExceptionHandler({MethodArgumentNotValidException.class, HttpMessageNotReadableException.class})
-	@ResponseStatus(HttpStatus.BAD_REQUEST)
-	ApiErrorResponse invalidRequest() {
-		return ApiErrorResponse.of(ApiErrorCode.INVALID_REQUEST);
-	}
+    @ExceptionHandler({MethodArgumentNotValidException.class, HttpMessageNotReadableException.class})
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    ApiErrorResponse invalidRequest() {
+        return ApiErrorResponse.of(ApiErrorCode.INVALID_REQUEST);
+    }
 }
